compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__dead_code_detection__private_type_alias_underlying_type_referenced_by_public_function.snap
---
source: compiler-core/src/type_/tests/dead_code_detection.rs
expression: "\ntype Wibble = Int\n\npub fn used() -> Int {\n  10\n}\n"
---
----- SOURCE CODE

type Wibble = Int

pub fn used() -> Int {
  10
}


----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ type Wibble = Int
  │ ^^^^^^^^^^^^^^^^^ This private type is never used

Hint: You can safely remove it.
