compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__dead_code_detection__unused_recursive_function.snap
---
source: compiler-core/src/type_/tests/dead_code_detection.rs
expression: "\nfn unused(value: Int) -> Int {\n  case value {\n    0 -> 0\n    _ -> unused(value - 1)\n  }\n}\n"
---
----- SOURCE CODE

fn unused(value: Int) -> Int {
  case value {
    0 -> 0
    _ -> unused(value - 1)
  }
}


----- WARNING
warning: Unused private function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ fn unused(value: Int) -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
