compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__dead_code_detection__unused_type_alias.snap
---
source: compiler-core/src/type_/tests/dead_code_detection.rs
expression: "\ntype Wibble = Int\n"
---
----- SOURCE CODE

type Wibble = Int


----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ type Wibble = Int
  │ ^^^^^^^^^^^^^^^^^ This private type is never used

Hint: You can safely remove it.
